--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   .body{
     background-color: rgb(130, 182, 221);
     padding: 40px;
-    margin: 0 60px;
+    margin:  60px;
   }
 
 #footing{
