--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   #nav{
     background-color: rgb(93, 89, 89);
     text-align: center;
-    font-size: large;
+    font-size: x-large;
     color: rgb(254, 255, 255);
   }
 
